--- a/upgrate/upgrate/upgrate.vcxproj.filters
+++ b/upgrate/upgrate/upgrate.vcxproj.filters
@@ -18,12 +18,21 @@
     <ClCompile Include="main.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
+    <ClCompile Include="stats.cpp">
+      <Filter>Файлы ресурсов</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="profile.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="test_runner.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="http_request.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="stats.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
