--- a/upgrate/upgrate/upgrate.vcxproj.filters
+++ b/upgrate/upgrate/upgrate.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="search_server.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="profile_advanced.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="profile.h">
@@ -39,6 +42,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="search_server.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="profile_advanced.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
