--- a/upgrate/upgrate/upgrate.vcxproj
+++ b/upgrate/upgrate/upgrate.vcxproj
@@ -117,17 +117,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="json.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="profile_advanced.cpp" />
-    <ClCompile Include="xml.cpp" />
+    <ClCompile Include="stats_aggregator.cpp" />
+    <ClCompile Include="stats_aggregator_test.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="json.h" />
     <ClInclude Include="profile.h" />
     <ClInclude Include="profile_advanced.h" />
+    <ClInclude Include="stats_aggregator.h" />
     <ClInclude Include="test_runner.h" />
-    <ClInclude Include="xml.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
