--- a/upgrate/upgrate/upgrate.vcxproj.filters
+++ b/upgrate/upgrate/upgrate.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="profile_advanced.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Common.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
