--- a/upgrate/upgrate/upgrate.vcxproj
+++ b/upgrate/upgrate/upgrate.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -120,10 +120,8 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="profile_advanced.cpp" />
-    <ClCompile Include="Solution.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Common.h" />
     <ClInclude Include="profile.h" />
     <ClInclude Include="profile_advanced.h" />
     <ClInclude Include="test_runner.h" />
