--- a/upgrate/upgrate/upgrate.vcxproj
+++ b/upgrate/upgrate/upgrate.vcxproj
@@ -118,10 +118,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FinanceManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="profile_advanced.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Date.h" />
+    <ClInclude Include="FinanceManager.h" />
     <ClInclude Include="profile.h" />
     <ClInclude Include="profile_advanced.h" />
     <ClInclude Include="test_runner.h" />
