Транспортный справочник, часть D

--- a/RedBelt/RedBelt/RedBelt.vcxproj
+++ b/RedBelt/RedBelt/RedBelt.vcxproj
@@ -125,12 +125,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\upgrate\upgrate\json.cpp" />
     <ClCompile Include="..\..\upgrate\upgrate\main.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="main_slow.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\upgrate\upgrate\json.h" />
+    <ClInclude Include="..\..\upgrate\upgrate\test_runner.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
